force-app/main/default/objects/cpm__Payment_Schedule__c/fields/cpm__Additional_SOQL__c.field-meta.xml
<CustomField>
    <fullName>cpm__Additional_SOQL__c</fullName>
    <description>Custom SOQL to limit the installments generated and/or included. Use with caution and test carefully. The query added here must start with &apos;AND&apos;.</description>
    <inlineHelpText>Custom SOQL to limit the installments generated and/or included. Use with caution and test carefully. The query added here must start with &apos;AND&apos;.</inlineHelpText>
    <label>Additional SOQL</label>
    <length>15000</length>
    <type>LongTextArea</type>
</CustomField>