force-app/main/default/objects/cpm__Payment_Schedule__c/fields/cpm__Close_Async_Apex_Job_Id__c.field-meta.xml
<CustomField>
    <fullName>cpm__Close_Async_Apex_Job_Id__c</fullName>
    <label>Close Async Apex Job Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>