force-app/main/default/objects/cpm__Payment_Schedule__c/fields/cpm__Finished_Status__c.field-meta.xml
<CustomField>
    <fullName>cpm__Finished_Status__c</fullName>
    <description>This field is for using the payment schedule to create references for payslips (e.g. Acceptgiro, ESR, etc. payment methods). The Finished Status indicates in your org that the generated installments are ready for collection using your payslip process.</description>
    <inlineHelpText>This field is for using the payment schedule to create references for payslips (e.g. Acceptgiro, ESR, etc. payment methods). The Finished Status indicates in your org that the generated installments are ready for collection using your payslip process.</inlineHelpText>
    <label>Finished Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>-- Provided by Sys Admin --</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>