force-app/main/default/objects/cpm__Payment_Schedule__c/fields/cpm__Generator_Class__c.field-meta.xml
<CustomField>
    <fullName>cpm__Generator_Class__c</fullName>
    <label>Generator Class</label>
    <length>100</length>
    <type>Text</type>
</CustomField>