force-app/main/default/objects/cpm__Payment_Schedule__c/fields/cpm__Hashcode__c.field-meta.xml
<CustomField>
    <fullName>cpm__Hashcode__c</fullName>
    <label>Hashcode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>