force-app/main/default/objects/cpm__Payment_Schedule__c/fields/cpm__Hashcode_date__c.field-meta.xml
<CustomField>
    <fullName>cpm__Hashcode_date__c</fullName>
    <label>Hashcode date</label>
    <type>Date</type>
</CustomField>