force-app/main/default/objects/cpm__Payment_Schedule__c/fields/cpm__Nr_Of_Installments__c.field-meta.xml
<CustomField>
    <fullName>cpm__Nr_Of_Installments__c</fullName>
    <description>Number of installments in the schedule</description>
    <label>Total Number of Installments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>