force-app/main/default/objects/cpm__Payment_Schedule__c/fields/cpm__Original_Payment_Schedule__c.field-meta.xml
<CustomField>
    <fullName>cpm__Original_Payment_Schedule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Original Payment Schedule</label>
    <referenceTo>cpm__Payment_Schedule__c</referenceTo>
    <relationshipLabel>Payment Schedules</relationshipLabel>
    <relationshipName>Payment_Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>