force-app/main/default/objects/cpm__Payment_Schedule__c/fields/cpm__Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>cpm__Payment_Method__c</fullName>
    <description>Field get automatically populated in trigger and is used by ProcessingHub to define correct package</description>
    <label>Payment Method</label>
    <length>50</length>
    <type>Text</type>
</CustomField>