force-app/main/default/objects/cpm__Payment_Schedule__c/fields/cpm__Payment_Processor__c.field-meta.xml
<CustomField>
    <fullName>cpm__Payment_Processor__c</fullName>
    <label>Payment Processor</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>cpm__PaymentMethod__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>PaymentHub-Stripe</fullName>
            </value>
            <value>
                <fullName>FinDock-GoCardless</fullName>
            </value>
            <value>
                <fullName>PaymentHub-PayPal</fullName>
            </value>
            <value>
                <fullName>PaymentHub-GiftAid</fullName>
            </value>
            <value>
                <fullName>PaymentHub-MT940</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>