force-app/main/default/objects/cpm__Payment_Schedule__c/fields/cpm__Prepare_Async_Apex_Job_Id__c.field-meta.xml
<CustomField>
    <fullName>cpm__Prepare_Async_Apex_Job_Id__c</fullName>
    <label>Prepare Async Apex Job Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>