force-app/main/default/objects/cpm__Payment_Schedule__c/fields/cpm__Report_Summary__c.field-meta.xml
<CustomField>
    <fullName>cpm__Report_Summary__c</fullName>
    <description>Report Summary on JSON format to use on PaymentScheduleReportSummary component</description>
    <label>Report Summary</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>