force-app/main/default/objects/cpm__Payment_Schedule__c/fields/cpm__Selection_Date__c.field-meta.xml
<CustomField>
    <fullName>cpm__Selection_Date__c</fullName>
    <description>Installments with a due date on or before the selection date are collected if all other processing details match.</description>
    <inlineHelpText>Installments with a due date on or before the selection date are collected if all other processing details match.</inlineHelpText>
    <label>Selection Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>