force-app/main/default/objects/cpm__Payment_Schedule__c/fields/cpm__Total_Value__c.field-meta.xml
<CustomField>
    <fullName>cpm__Total_Value__c</fullName>
    <description>Sum of the amount of all the child installments</description>
    <label>Total Value of Installments</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>