force-app/main/default/objects/cpm__Payment_Schedule__c/fields/cpm__Totals_Async_Apex_Job_Id__c.field-meta.xml
<CustomField>
    <fullName>cpm__Totals_Async_Apex_Job_Id__c</fullName>
    <description>Holds the id of the batch apex job for recalculating totals fields on the payment schedule schedule</description>
    <label>Totals Async Apex Job Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>