force-app/main/default/objects/cpm__Payment_Schedule__c/validationRules/cpm__Collection_cant_be_in_the_past_for_SEPA.validationRule-meta.xml
<ValidationRule>
    <fullName>cpm__Collection_cant_be_in_the_past_for_SEPA</fullName>
    <active>true</active>
    <errorConditionFormula>IF( 
    AND( 
        NOT(ISPICKVAL( cpm__Status__c , &apos;Verified&apos;)),
        NOT(ISPICKVAL( cpm__Status__c , &apos;Done&apos;)),
        NOT(ISPICKVAL( cpm__Status__c , &apos;Pending Verification&apos;)),
        OR(
            ISPICKVAL( cpm__PaymentMethod__c, &apos;Direct Debit&apos;),
            ISPICKVAL( cpm__PaymentMethod__c, &apos;Credit Transfer&apos;)
        ),
        OR(
            ISPICKVAL( cpm__Payment_Processor__c, &apos;PaymentHub-SEPA&apos;),
            ISPICKVAL( cpm__Payment_Processor__c, &apos;DummyExtension-PSP&apos;)
        ),
        NOT(ISNULL( cpm__Collection_Date__c )), 
        cpm__Collection_Date__c &lt; TODAY() 
    ), 
    true, 
    false 
)</errorConditionFormula>
    <errorDisplayField>cpm__Collection_Date__c</errorDisplayField>
    <errorMessage>Collection Date can&apos;t be in the past</errorMessage>
</ValidationRule>