force-app/main/default/objects/cpm__Payment_Schedule__c/validationRules/cpm__Lock_Fiscal_Period.validationRule-meta.xml
<ValidationRule>
    <fullName>cpm__Lock_Fiscal_Period</fullName>
    <active>true</active>
    <errorConditionFormula>cpm__Collection_Date__c &lt;= $Setup.cpm__Lock_Fiscal_Periods__c.cpm__Lock_Payments_Up_To__c</errorConditionFormula>
    <errorMessage>Fiscal period is closed. You can&apos;t edit this record</errorMessage>
</ValidationRule>