force-app/main/default/objects/cpm__Payment_Schedule__c/listViews/cpm__All_new.listView-meta.xml
<ListView>
    <fullName>cpm__All_new</fullName>
    <columns>NAME</columns>
    <columns>cpm__Payment_Processor__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>cpm__Run_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>